<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">PubCrawl</string>
    <string name="hello_world">Hello world!</string>
    <string name="enter_pin">Enter Code</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_game_menu">GameMenu</string>
    <string name="log_in_button">Join</string>
    <string name="current_crawl">Current Crawls</string>
    <string name="games">Games</string>
    <string name="card">Card Games</string>
    <string name="dice">Dice Games</string>
    <string name="two_d_dice">2D Dice</string>
    <string name="coin">Coin Games</string>
    <string name="spin">Spinner Games</string>
    <string name="title_activity_card_games">CardGames</string>
    <string name="title_activity_dice_games">DiceGames</string>
    <string name="title_activity_coin_games">CoinGames</string>
    <string name="title_activity_spinner_games">SpinnerGames</string>
    <string name="title_activity_photo_cap">PhotoCap</string>
    <string name="title_activity_web_image">Image</string>
    <string name="flip">Swipe up to flip the coin </string>
    <string name="title_current_crawls">Current Crawls</string>
    <string name="Draw">Draw</string>
    <string name="create_user_name">Create User Name</string>
    <string name="enter_user_name">Enter User Name</string>
    <string name="selected_crawls">Selected Crawl</string>
    <string name="change_user_name">Change User Name</string>
    <string name="title_activity_info">Info</string>
    <string name="title_activity_row_layout">RowLayout</string>
    <string name="title_activity_crawls_list_page">CrawlsListPage</string>
    <string name="title_activity_view_feed">ViewFeed</string>
    <string name="save">save image</string>

    <color name="commentexistscolour">#99F</color>

    <string name="title_activity_crawl_map_overview">CrawlMapOverview</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_pub_description">PubDescription</string>
    
    <string name="kings">Kings</string>
    <string name="rules">View / Edit Kings rules</string>
    <string name="editcard">Card</string>
    <string name="editrule">New rule</string>
	<string-array name="Cards">
        <item>Ace</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>Jack</item>
        <item>Queen</item>
        <item>King</item>
    </string-array>
	<color name="whiteText">#FFF</color>

</resources>