<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <Button
        android:id="@+id/bCurrentCrawls"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="150dp"
        android:padding="15dp"
        android:text="@string/current_crawl" />

    <Button
        android:id="@+id/bLogIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/bCurrentCrawls"
        android:layout_marginTop="44dp"
        android:text="submit" />

    <Button
        android:id="@+id/bGames"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/bCurrentCrawls"
        android:layout_alignRight="@+id/bCurrentCrawls"
        android:layout_below="@+id/bCurrentCrawls"
        android:layout_marginTop="25dp"
        android:padding="15dp"
        android:text="@string/games" />

    <Button
        android:id="@+id/bChangeName"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/bGames"
        android:layout_alignRight="@+id/bGames"
        android:layout_below="@+id/bGames"
        android:layout_marginTop="25dp"
        android:padding="15dp"
        android:text="@string/change_user_name" />

    <EditText
        android:id="@+id/loginCodeTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/bCurrentCrawls"
        android:layout_alignBottom="@+id/bLogIn"
        android:layout_toLeftOf="@+id/bLogIn"
        android:ems="10"
        android:hint="@string/enter_pin"
        android:imeOptions="actionGo"
        android:inputType="textVisiblePassword"
        android:maxLength="5"
        tools:context=".MainActivity" >

    </EditText>

    <TextView
        android:id="@+id/tvUserName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:text="@string/hello_world"
        android:textSize="18sp" />

</RelativeLayout>
